load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "agent_proto",
    srcs = [
        "agent.proto",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "connections_proto",
    srcs = [
        "connections.proto",
    ],
    visibility = ["//visibility:public"],
)
