load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "kubernetes_autoscaling_proto",
    srcs = [
        "autoscaling.proto",
        "common.proto",
        "options.proto",
        "recommender.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ]
)
